Avoid some more warnings
Signed-off-by: Paul Smedley <paul@smedley.id.au>